--- a/first.html
+++ b/first.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>  First Websitek      </h1>
+    <h1>  First Website      </h1>
 </body>
 </html>
