--- a/first.html
+++ b/first.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Website For CSC102</title>
 </head>
 <body>
     <h1>  First Website      </h1>
+    <h2>  First Website      </h2>
+    <h3>  First Website      </h3>
+    <h4>  First Website      </h4>
+    <h5>  First Website      </h5>
+    <h6>  First Website      </h6>
 </body>
 </html>
