--- a/weekOneAssignments/boards.html
+++ b/weekOneAssignments/boards.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <!-- CrystaLynn Wisniewski -->
+    <link rel="stylesheet" href="main.css">
     <title> Boards Page </title>
     <style>
-        body {background-color: olive;}
         h1 {font-family: Impact;
             font-size:xx-large;}
         p {font-family: Tahoma;
