Added an array of names in js file and random generation to pick a name for that game session

--- a/weekTwoAssignments/game.html
+++ b/weekTwoAssignments/game.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Let's Play HangMan!</h1>
+    <h1>Try to guess the name..</h1>
     <table>
         <tr>
             <th>   </th>
@@ -20,8 +21,10 @@
             <td id="livesLeft"><h3>3</h3></td>
           </tr>
     </table>
-    <p id="numberSlot">Please Work... for my sake</p>
+    <p id="clickTheButtonText">Click the button to Begin!</p>
 
-    <button type="button" onclick="myFunction()">Press To Play!</button>
+    <button type="button" id="generateButton" onclick="generateName()">Generate Name</button>
+
+    <p>Testing Line</p>
 </body>
 </html>
