--- a/weekTwoAssignments/game.html
+++ b/weekTwoAssignments/game.html
@@ -13,8 +13,21 @@
     <table>
         <tr>
             <th>   </th>
+            <th id="nameChar1"> . </th>
+            <th id="nameChar2"> . </th>
+            <th id="nameChar3"> . </th>
+            <th id="nameChar4"> . </th>
+            <th id="nameChar5"> . </th>
+            <th id="nameChar6"> . </th>
+        </tr>
+        <tr>
             <th>   </th>
-            <th>   </th>
+            <th>___</th>
+            <th>___</th>
+            <th>___</th>
+            <th>___</th>
+            <th>___</th>
+            <th>___</th>
         </tr>
         <tr>
             <td><h3>Lives left: </h3></td>
