--- a/weekTwoAssignments/game.html
+++ b/weekTwoAssignments/game.html
@@ -36,7 +36,7 @@
     </table>
     <p id="clickTheButtonText">Click the button to Begin!</p>
 
-    <button type="button" id="generateButton" onclick="generateName()">Generate Name</button>
+    <button type="button" id="generateButton" onclick="generateName()">Click Me</button>
 
     <p>Testing Line</p>
 </body>
