--- a/weekTwoAssignments/game.html
+++ b/weekTwoAssignments/game.html
@@ -34,12 +34,12 @@
     <table id="name">
         <tr>
             <th>   </th>
+            <th id="nameChar0"> . </th>
             <th id="nameChar1"> . </th>
             <th id="nameChar2"> . </th>
             <th id="nameChar3"> . </th>
             <th id="nameChar4"> . </th>
             <th id="nameChar5"> . </th>
-            <th id="nameChar6"> . </th>
         </tr>
         <tr>
             <th>   </th>
@@ -58,7 +58,7 @@
         <p></p>
         <tr id="lives">
             <td><h3>Lives left: </h3></td>
-            <td id="livesLeft"><h3>3</h3></td>
+            <td><h3 id="lifeLeft">3</h3></td>
           </tr>
     </table>
     <table id="incorrectLetters">
