--- a/weekThreeAssignments/strings.html
+++ b/weekThreeAssignments/strings.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Checker</title>
     <style>
-
+         h1{color: red;}
     </style>
     <script>
         
