--- a/weekThreeAssignments/strings.html
+++ b/weekThreeAssignments/strings.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <h1>Enter a word to check if it is a Palindrome!</h1>
+    <label></label>
     <input type="text" id="usersInput">
 </body>
 </html>
