--- a/weekThreeAssignments/strings.html
+++ b/weekThreeAssignments/strings.html
@@ -18,6 +18,7 @@
     <!--Button that will begin the loop of prompting the user and checking their string entry -->
     <!--When the buttin is clicked the checkForPalindrome function will run -->
     <button type="button" onclick="checkForPalindrome()" >Click to Begin</button>
+    <!--ASSIGNMENT 1 ENDS HERE-->
     <script>
     function checkForPalindrome(){
         // Variable to hold the users answer for if they want to check a word
@@ -60,9 +61,9 @@
                     userAnswer = prompt(userString + " is NOT a palindrome." + "\n" + "Want to check another sentence? Type 'yes'.", "").toLowerCase();
                 }   
             }
-
         }
-    }
+    } // ASSIGMENT 1 ENDS HERE
+
     </script>
 </body>
 </html>
