--- a/weekThreeAssignments/strings.html
+++ b/weekThreeAssignments/strings.html
@@ -19,6 +19,10 @@
     <!--When the buttin is clicked the checkForPalindrome function will run -->
     <button type="button" onclick="checkForPalindrome()" >Click to Begin</button>
     <!--ASSIGNMENT 1 ENDS HERE-->
+    <label for="username">Please Enter Your Username: </label>
+    <input type="text" id="username" maxlength="20">
+    <label for="password">Please Enter Your Password: </label>
+    <input type="text" id="password">
     <script>
     function checkForPalindrome(){
         // Variable to hold the users answer for if they want to check a word
