--- a/weekThreeAssignments/strings.html
+++ b/weekThreeAssignments/strings.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Checker</title>
     <style>
-        body {background-color: rgb(0, 91, 0); margin-top: 10%;}
-        .assignmentOne {margin-left: 35%; font-family: Times New Roman; color: rgb(0, 229, 255);}
+        body {background-color: rgb(0, 91, 0); }
+        .assignmentOne {margin-left: 35%; font-family: Times New Roman; color: rgb(0, 229, 255); display: none;}
         button{background-color: black; margin-left: 18%; font-family: Times New Roman; color: rgb(0, 229, 255);}
+        #infoForm { width: 300px; margin: 20vh auto 0 auto; padding: 20px; background-color: whitesmoke; border-radius: 4px; font-size: 12px;}
+        #infoForm h1 {color: #0f2027; text-align: center;}
+        #infoForm button {padding: 10px; margin-top: 10px; width: 100%; color: white; background-color: purple; border: none; border-radius: 4px;}
+        .userInput {display: flex; flex-direction: column; margin-right: 20px;}
+        .input-control input {border: 2px dotted black;border-radius: 4px;display: block;font-size: 12px;padding: 10px;width: 100%;}
+        .input-control input:focus {outline: 0;}
+        .input-control.success input {border-color: #09c372;}
+        .input-control.error input {border-color: #ff3860;}
+        .input-control .error {color: #ff3860; font-size: 9px; height: 13px;}
     </style>
 </head>
-<body>
+<div>
     <h1 class="assignmentOne"></h1>
     <!--Paragraph to let the user know to click the button to be able to enter their string -->
     <p class="assignmentOne">Hello, to check a sentence or word is a palidrome, click the button!</p>
@@ -19,17 +28,29 @@
     <!--Button that will begin the loop of prompting the user and checking their string entry -->
     <!--When the buttin is clicked the checkForPalindrome function will run -->
     <button type="button" class="assignmentOne" onclick="checkForPalindrome()" >Click to Begin</button>
+</div>
     <!--ASSIGNMENT 1 ENDS HERE-->
-    <hr>
-    <form id="infoForm" onSubmit="checkForm()">
-    <label for="fName">Please Enter Your First Name: </label>
-    <input type="text" id="fName" name="fName" required maxlength="20" placeholder="First Name" value="tempFirst"/><br>
-    <label for="lName">Please Enter Your Last Name: </label>
-    <input type="text" id="lName" name="lName" required maxlength="20" placeholder="Last Name" value="tempLast"/><br>
-    <label for="zipCode">Please Enter Your 5 Digit ZipCode: </label>
-    <input type="text" id="zipCode" name="zipCode" required maxlength="5" placeholder="00000" value="00000"/><br>
-    <input type="submit" value="Submit"/>
-    </form>
+    <div class="container">
+        <form id="infoForm" action="/">
+            <h1>Information Registration</h1>
+            <div class="userInput">
+                <label for="fName">Please Enter Your First Name: </label>
+                <input type="text" id="fName" name="fName" required maxlength="20" placeholder="First Name" value="tempFirst"/>
+                <div class="error"></div>
+            </div>
+            <div class="userInput">
+                <label for="lName">Please Enter Your Last Name: </label>
+                <input type="text" id="lName" name="lName" required maxlength="20" placeholder="Last Name" value="tempLast"/><br>
+                <div class="error"></div>
+            </div>
+            <div class="userInput">
+                <label for="zipCode">Please Enter Your 5 Digit ZipCode: </label>
+                <input type="text" id="zipCode" name="zipCode" required maxlength="5" placeholder="00000" value="00000"/><br>
+                <div class="error"></div>
+            </div>    
+                <button type="submit">Register</button>
+        </form>
+    </div>    
     <script>
     function checkForPalindrome(){
         // Variable to hold the users answer for if they want to check a word
