--- a/weekThreeAssignments/strings.html
+++ b/weekThreeAssignments/strings.html
@@ -8,7 +8,7 @@
     <style>
         body {background-color: rgb(0, 91, 0); }
         .assignmentOne {margin-left: 35%; font-family: Times New Roman; color: rgb(0, 229, 255); display: none;}
-        button{background-color: black; margin-left: 18%; font-family: Times New Roman; color: rgb(0, 229, 255);}
+        .assignmentOne button{background-color: black; margin-left: 18%; font-family: Times New Roman; color: rgb(0, 229, 255);}
         #infoForm { width: 300px; margin: 20vh auto 0 auto; padding: 20px; background-color: whitesmoke; border-radius: 4px; font-size: 12px;}
         #infoForm h1 {color: #0f2027; text-align: center;}
         #infoForm button {padding: 10px; margin-top: 10px; width: 100%; color: white; background-color: purple; border: none; border-radius: 4px;}
