--- a/weekThreeAssignments/strings.html
+++ b/weekThreeAssignments/strings.html
@@ -32,28 +32,31 @@
 </div>
     <!--ASSIGNMENT 1 ENDS HERE-->
     <div class="container" id="container">
+        <!--Header of the page-->
         <div class="header">
         <h1>Your Own Special Message!</h1>
         <p>*Please fill out the form below to reveal your special message!</p>
         </div>
+        <!--Form for user to fill out-->
         <form id="infoForm" action="/">
             <h1>Information Registration</h1>
             <div class="userInput">
+                <!--Input box for their first name-->
                 <label for="fName">Please Enter Your First Name: </label>
-                <input type="text" id="fName" name="fName" required maxlength="20" placeholder="First Name" value="tempFirst"/>
-                <div class="error"></div>
+                <input type="text" id="fName" name="fName" required maxlength="20" placeholder="First Name"/>
             </div>
             <div class="userInput">
+                <!--Input box for their last name-->
                 <label for="lName">Please Enter Your Last Name: </label>
-                <input type="text" id="lName" name="lName" required maxlength="20" placeholder="Last Name" value="tempLast"/><br>
-                <div class="error"></div>
+                <input type="text" id="lName" name="lName" required maxlength="20" placeholder="Last Name"/><br>
             </div>
             <div class="userInput">
+                <!--Input box for their zip code-->
                 <label for="zipCode">Please Enter Your 5 Digit ZipCode: </label>
-                <input type="text" id="zipCode" name="zipCode" required maxlength="5" placeholder="00000" value="00000"/><br>
-                <div class="error"></div>
+                <input type="text" id="zipCode" name="zipCode" required maxlength="5" placeholder="00000"/><br>
             </div>    
-                <button type="submit">Register</button>
+                <!--Button to press when form is filled out to submit it-->
+                <button type="submit">Submit</button>
         </form>
     </div>    
     <script>
@@ -100,35 +103,52 @@
             }
         }
     } // ASSIGMENT 1 ENDS HERE
+    // Variable to hold the form element
     const form = document.getElementById("infoForm");
-
+    // Added an event listener to the form using the variable
+    // This event listener listens for the user to click the 'submit' button
     form.addEventListener('submit', e => {
+        // Prevent Default alerts the user to fill out a box if it is empty
         e.preventDefault();
+        // Call/Run the checkForm function
         checkForm();
     });
 
     function checkForm(){
-    const fName = document.getElementById("fName").value;
-    const lName = document.getElementById("lName").value;
-    const zip = document.getElementById("zipCode").value;
-        let fullName = fName + " " + lName;
-        console.log(fName + " " + fName.length);
-        console.log(lName + " " + lName.length);
-        console.log(zip);
-        console.log(fullName + " " + fullName.length);
-        if (fullName.length > 21){
-            alert("Invalid Entry, Your full name must be 20 characters or less");
-        } else {
-            if (zip.length != 5){
-                alert("Invalid Entry, Your zip code must be 5 digits long");
-            } else{
-                document.getElementById("container").style.display = "none";
-                document.body.style.backgroundColor = "black";
-                document.body.style.backgroundImage = "url('https://i.pinimg.com/originals/ab/a1/ea/aba1ea74f6558b344c8107f9c7343514.jpg')";
+        // Variables to hold the values in the input boxes
+        const fName = document.getElementById("fName").value;
+        const lName = document.getElementById("lName").value;
+        const zip = document.getElementById("zipCode").value;
+            // Add the names together to create the full name, but add a space inbetween the names
+            let fullName = fName + " " + lName;
+            // Debugging console logs
+            console.log(fName + " " + fName.length);
+            console.log(lName + " " + lName.length);
+            console.log(zip);
+            console.log(fullName + " " + fullName.length);
+            // If the full name is more than 21 characters combined
+            // I did 21 to account for the 1 character used for the space
+            if (fullName.length > 21){
+                // Alert the user that their entry is too long
+                alert("Invalid Entry, Your full name must be 20 characters or less");
+            // If the name is not too long then
+            } else {
+                // If the zip code isn't correct
+                if (zip.length != 5){
+                    // Alert the user that their zip code entry is invalid
+                    alert("Invalid Entry, Your zip code must be 5 digits long");
+                // If the zip code is valid and has 5 digits
+                } else{
+                    // Get rid of the form and header by setting the display to none
+                    document.getElementById("container").style.display = "none";
+                    // Change the background color to black
+                    document.body.style.backgroundColor = "black";
+                    // Reveal the secret message by setting the background image to our message image
+                    document.body.style.backgroundImage = "url('https://i.pinimg.com/originals/ab/a1/ea/aba1ea74f6558b344c8107f9c7343514.jpg')";
 
+                }
             }
         }
-    }
 
     </script>
 </body>
