--- a/weekFiveAssignments/boards.html
+++ b/weekFiveAssignments/boards.html
@@ -3,7 +3,7 @@
 <head>
     <!-- CrystaLynn Wisniewski -->
     <link rel="stylesheet" href="main.css">
-    <title> Boards Page </title>
+    <title>Boards Page</title>
     <style>
         h1 {font-family: Impact;
             font-size:xx-large;}
@@ -11,9 +11,22 @@
            font-size:medium;}
     </style>
 </head>
+<body>
 <p>
+    <header>
+        <h1></h1>  
+    </header>
+    <!-- Navigation Links -->
+    <nav>
+        <h2>
+        <a href="index.html"> HOME </a>
+        <a href="game.html"> Play a Game </a>
+        <a href="strings.html"> Secret Message </a>
+        <a href="table.html"> Grades Table </a>
+    </h2>
+    </nav>
     <!-- Page Header -->
-    <h1>  Game Design Program Objectives      </h1>
+    <h3>  Game Design Program Objectives      </h3>
     <!-- Seperation paragraph -->
     <p>   </p>
     <!-- Objective One -->
@@ -33,5 +46,10 @@
     <!-- Objective Six -->
         <p>    6. Establish collaboration, mentorship and professional leadership skills by working with other disciplines to deliver highly
         polished and completed projects.      </p>
+        <footer>
+            CrystaLynn Wisniewski<br>
+            University of Advancing Technology<br>
+            2625 W Baseline Rd, Tempe, AZ 85283<br>
+        </footer>  
 </body>
 </html>
