--- a/weekFiveAssignments/game.html
+++ b/weekFiveAssignments/game.html
@@ -24,6 +24,18 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1></h1>  
+    </header>
+    <!-- Navigation Links -->
+    <nav>
+        <h2>
+        <a href="index.html"> HOME </a>
+        <a href="boards.html"> Boards page </a>
+        <a href="strings.html"> Secret Message </a>
+        <a href="table.html"> Grades Table </a>
+    </h2>
+    </nav>
     <!-- "Start the game screen" -->
     <h1>Let's Play HangMan!</h1>
 
