--- a/weekFiveAssignments/index.html
+++ b/weekFiveAssignments/index.html
@@ -1,19 +1,37 @@
+<!--2/8/24-->
 <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="main.css">
-    <title> Meme Page </title>
+    <title>Landing Page</title>
     <style>
-        body {font-family: Courier;
-              font-size: xx-large;
-              font-weight: 200;}
+        body {font-family: Courier; font-weight: 200; text-align: center;}
     </style>
 </head>
 <body>
-    <h1>  MEME TIME   </h1>
+    <header>
+        <h1></h1>  
+    </header>
+    <!-- Navigation Links -->
+    <nav>
+        <h2>
+        <a href="boards.html"> Boards page </a>
+        <a href="game.html"> Play a Game </a>
+        <a href="strings.html"> Secret Message </a>
+        <a href="table.html"> Grades Table </a>
+    </h2>
+    </nav>
     <p>   </p>
     <img id="programmingMemeImage" 
          src="https://uploads-ssl.webflow.com/5f3c19f18169b62a0d0bf387/60d33be7eedf8e1f31aabcec_BwENfmI0CU5dZGYlSyo142mpfG08-rYgTS-Qm47uMUXN6JXtmdZvtzVzTooUQdXTWmTD8uzF9N6XQJA2vUIMi53tunFyVtvOBJTNfOjHit2P_JkTmFzFsK7ep6Vb9781XZnRAryH.png"
-         height = "350" width = "350">      
+         height = "350" width = "350">   
+        <p></p>
+
+    <footer>
+        CrystaLynn Wisniewski<br>
+        University of Advancing Technology<br>
+        2625 W Baseline Rd<br>
+        Tempe, AZ 85283<br>
+    </footer>   
 </body>
 </html>
